# Multirobot_exploration

./: README.md
CBBA/: CMakeLists.txt  package.xml
CBBA/launch/: run_CBBA.launch
CBBA/scripts/: CBBA.py  CBBA_Main.py  CBBA_node.py  keypress.py
CBBA_jupyter/: CBBA.ipynb  CBBA.py  CBBA_Main.py  README.md  Untitled.ipynb  matlab.mat
CBBA_jupyter/.ipynb_checkpoints/: CBBA-checkpoint.ipynb  Untitled-checkpoint.ipynb
adding_fixed_frame/: CMakeLists.txt  package.xml
adding_fixed_frame/src/: adding_fixed_frame.cpp
explore/include/explore/: .explore.h.swp  (+1 more)
explore/launch/: .explore.launch.swp  explore.launch
explore/src/: .explore.cpp.swp  .frontier_search.cpp.swp  explore.cpp
kiro_gui_msgs/: CMakeLists.txt  package.xml
kiro_gui_msgs/msg/: PositionArray.msg
multi_explore/: CMakeLists.txt  package.xml
multi_explore/src/: .costmap_client.cpp.swp  costmap_client.cpp
pcl2_merger/: CMakeLists.txt  package.xml
pcl2_merger/src/: pcl2_merger_node.cpp
rqt_search_position/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_search_position/include/: search_position.h
rqt_search_position/script/: search_position.py
rqt_search_position/src/: search_position.cpp  search_position.ui
snu_task_alloc/: CMakeLists.txt  README.md  package.xml
snu_task_alloc/launch/: .run_CBBA.launch.swn  .run_CBBA.launch.swo  .run_CBBA.launch.swp  run_CBBA.launch
snu_task_alloc/rviz/: allocation_example.rviz
snu_task_alloc/scripts/: A_star.py  CBBA.py  CBBA_Main.py  CBBA_node.py  CBBA_runfile.py  path_node.py
snu_task_alloc/srv/: AllocateTask.srv  PathCompute.srv
(+15 files in other folders)
